--- a/index.html
+++ b/index.html
@@ -83,14 +83,13 @@
     <main>
         <section id="notices">
             <h1>Public Notices</h1>
-            <div class="notice">
-                <h2>Notice Title 1</h2>
-                <p>Details about the first public notice. <a href="document1.pdf" download>Download</a></p>
-            </div>
-
-            <div class="notice">
-                <h2>Notice Title 2</h2>
-                <p>Details about the second public notice. <a href="document2.pdf" download>Download</a></p>
+            <div id="notice-list">
+                <p>To add notices, upload your documents to the repository and update the links below.</p>
+                <div class="notice">
+                    <h2>Notice Title Example</h2>
+                    <p>Details about this notice. <a href="example_notice.pdf" download>Download</a></p>
+                </div>
+                <!-- Add more notices here -->
             </div>
         </section>
 
