--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
             <div id="notice-list">
                 <p>To add notices, upload your documents to the repository and update the links below.</p>
                 <div class="notice">
-                    <h2>Notice Title Example</h2>
-                    <p>Details about this notice. <a href="example_notice.pdf" download>Download</a></p>
+                    <h2>Notice Title Example 1</h2>
+                    <p>Details about the first notice. <a href="example_notice1.pdf" download>Download</a></p>
+                </div>
+                <div class="notice">
+                    <h2>Notice Title Example 2</h2>
+                    <p>Details about the second notice. <a href="example_notice2.pdf" download>Download</a></p>
                 </div>
                 <!-- Add more notices here -->
             </div>
