--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@
                 noticeDiv.className = 'notice';
                 noticeDiv.innerHTML = `
                     <h2>${notice.title}</h2>
-                    <p>${notice.details} <a href="${notice.file}" download>Download</a></p>
+                    <p>${notice.details}</p>
+                    ${notice.summary ? `<p><strong>Summary:</strong> ${notice.summary}</p>` : ''}
+                    <a href="${notice.file}" target="_blank">View</a> |
+                    <a href="${notice.file}" download>Download</a>
+                    <div style="margin-top: 10px;">
+                        <iframe src="${notice.file}" style="width: 100%; height: 400px; border: 1px solid #ddd;"></iframe>
+                    </div>
                 `;
                 noticeList.appendChild(noticeDiv);
             });
@@ -110,6 +116,7 @@
             document.getElementById('notice-list').innerHTML = '<p>Failed to load notices.</p>';
         });
 </script>
+
 
 
         <section id="contact">
