--- a/index.html
+++ b/index.html
@@ -98,16 +98,35 @@
             notices.forEach(notice => {
                 const noticeDiv = document.createElement('div');
                 noticeDiv.className = 'notice';
-                noticeDiv.innerHTML = `
+
+                // Build the notice content
+                let noticeContent = `
                     <h2>${notice.title}</h2>
                     <p>${notice.details}</p>
-                    ${notice.summary ? `<p><strong>Summary:</strong> ${notice.summary}</p>` : ''}
-                    <a href="${notice.file}" target="_blank">View</a> |
-                    <a href="${notice.file}" download>Download</a>
-                    <div style="margin-top: 10px;">
-                        <iframe src="${notice.file}" style="width: 100%; height: 400px; border: 1px solid #ddd;"></iframe>
-                    </div>
                 `;
+
+                // Add summary if present
+                if (notice.summary) {
+                    noticeContent += `<p><strong>Summary:</strong> ${notice.summary}</p>`;
+                }
+
+                // Add file links if a file exists
+                if (notice.file) {
+                    noticeContent += `
+                        <a href="${notice.file}" target="_blank">View</a> |
+                        <a href="${notice.file}" download>Download</a>
+                        <div style="margin-top: 10px;">
+                            <iframe src="${notice.file}" style="width: 100%; height: 400px; border: 1px solid #ddd;"></iframe>
+                        </div>
+                    `;
+                }
+
+                // Add a message if no file is available
+                else {
+                    noticeContent += `<p><em>No file available for this notice.</em></p>`;
+                }
+
+                noticeDiv.innerHTML = noticeContent;
                 noticeList.appendChild(noticeDiv);
             });
         })
@@ -116,6 +135,7 @@
             document.getElementById('notice-list').innerHTML = '<p>Failed to load notices.</p>';
         });
 </script>
+
 
 
 
